--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,5 +6,8 @@
   <title><%= title %></title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href= "/css/profile.css" />
+  <link rel="stylesheet" href= "/css/setting.css" />
 </head>
 <body>
+  <!-- <li><a href="/settings">Settings</a></li> -->
