--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -16,7 +16,7 @@
       <div class="logo">Instagram</div>
       <nav class="nav-links">
         <a href="/dashboard"><i class="fas fa-home"></i> Home</a>
-        <a href="#"><i class="fas fa-search"></i> Search</a>
+        <a href="/search"><i class="fas fa-search"></i> Search</a>
         <a href="#"><i class="fas fa-compass"></i> Explore</a>
         <a href="#"><i class="far fa-play-circle"></i> Reels</a>
         <a href="#"><i class="far fa-paper-plane"></i> Messages</a>
