--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
             <i class="fab fa-facebook-square"></i> Log in with Facebook
         </button>
 
-        <a href="#" class="forgot-password">Forgot password?</a>
+        <a href="/forgot-password" class="forgot-password">Forgot password?</a>
 
         <div class="sign-up">
             <p>Don't have an account? <a href="/auth/register" class="sign-up-link">Sign up</a></p>
