--- a/views/edit-profile.ejs
+++ b/views/edit-profile.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header', { title: 'Edit Profile' }) %>
-
+<%- include('partials/sidebar') %>
 <div class="edit-profile-container">
   <h1>Edit Your Profile</h1>
   
