--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href= "/css/profile.css" />
   <link rel="stylesheet" href= "/css/setting.css" />
   <link rel="stylesheet" href= "/css/register.css" />
+  <link rel="stylesheet" href= "/css/sidebar.css" />
 </head>
 <body>
   <!-- <li><a href="/settings">Settings</a></li> -->
