--- a/views/uploadReel.ejs
+++ b/views/uploadReel.ejs
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Upload New Reel</title>
-  <link rel="stylesheet" href="/css/uploadReels.css"> <!-- Link your CSS here -->
+  <link rel="stylesheet" href="/css/uploadReels.css"> 
 </head>
 <body>
-
+  <%- include('partials/header', { title: 'Search Profile' }) %>
+  <%- include('partials/sidebar') %>
   <div class="upload-reel-container">
     <h1>Upload New Reel</h1>
 
