--- a/views/notification.ejs
+++ b/views/notification.ejs
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="/css/notification.css">
 </head>
 <body>
+  <%- include('partials/sidebar') %>
+
   <div class="container">
     <h1>Notifications</h1>
     <% if (notifications.length > 0) { %>
