--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/header', { title: 'Profile Settings' }) %>
+<%- include('partials/sidebar') %>
 
 <div class="settings-container">
   <h1>Profile Settings</h1>
