--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -158,13 +158,13 @@
           </div>
 
           <div id="saved" class="tab-content">
-            <!-- <div class="profile-saved-posts">
+            <div class="profile-saved-posts">
             < savedPosts.forEach(post => { >
               <div class="post-item">
-                <img src="<= post.postImage %>" alt="Saved Post">
+                <img src="<%= post.postImage %>" alt="Post Image">
               </div>
             < }) %>
-          </div> -->
+          </div>
           </div>
 
     </div>
